@@ -10,7 +10,6 @@ import org.jetbrains.annotations.NotNull;
 import org.lwjgl.glfw.GLFW;
 
 import java.util.Iterator;
-import java.util.stream.Collectors;
 
 public class KeyboardImpl extends AbstractKeyboard implements Keyboard {
     private final Minecraft mc;
@@ -50,7 +49,7 @@ public class KeyboardImpl extends AbstractKeyboard implements Keyboard {
                         k.getType() == InputConstants.Type.SCANCODE ? -1 : k.getValue(),
                         k.getType() == InputConstants.Type.SCANCODE ? k.getValue() : -1))
                 .sorted()
-                .collect(Collectors.toList())
+                .toList()
                 .iterator();
     }
 
